[gd_scene load_steps=11 format=3 uid="uid://blnhx5nlrl6ib"]

[ext_resource type="Script" path="res://SCRIPTS/CharacterBody3D.gd" id="1_fg43h"]
[ext_resource type="ArrayMesh" uid="uid://c66cj1ta6new7" path="res://FBX Import/Weapon2.obj" id="3_k6uxm"]
[ext_resource type="Texture2D" uid="uid://gfh46mitbxun" path="res://PNG FILES/progressrectanglewhite.png" id="3_vmonl"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ort0e"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_2ofe8"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_s2kt1"]
points = PackedVector3Array(6.89189, -0.417573, -0.453927, 6.89189, -0.352912, -0.453927, 7.77639, -0.418232, -0.381424, 6.87323, -0.418232, -0.381424, -6.89253, -0.417573, -0.099276, -6.89253, -0.417183, -0.099276, 6.87323, -0.352931, -0.381424, 6.89189, -0.352912, -0.237747, 7.77639, -0.352931, -0.381424, 7.77639, -0.418232, -0.308538, 6.87323, -0.418232, -0.308538, -6.89253, -0.417573, -0.0969699, -6.89253, -0.417183, -0.0969699, 6.87323, -0.352931, -0.308538, 6.89189, -0.417573, -0.237747, 7.77639, -0.352931, -0.308538)

[sub_resource type="Animation" id="Animation_f54b2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponSlot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponSlot/MeshInstance3D2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.054401, 2.00346, 1.01321)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WeaponSlot/MeshInstance3D2:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(4.44949e-09, 0.375246, 0.125664)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WeaponSlot:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_4qic3"]
resource_name = "attack"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponSlot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponSlot/MeshInstance3D2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(4.44949e-09, 0.375246, 0.125664), Vector3(-1.61299e-10, -0.931447, 0.125664), Vector3(-0.486947, -2.22704, 0.125664), Vector3(-0.486947, -2.7105, 0.125664), Vector3(-0.487794, 3.04027, 0.0873372)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WeaponSlot/MeshInstance3D2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.7, 1),
"transitions": PackedFloat32Array(-2, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.0619174, 1.99581, 1.02212), Vector3(0.421337, 1.85777, -1.43919), Vector3(2.79826, 2.11568, -1.54398), Vector3(3.4264, 2.11568, -0.941942), Vector3(3.64377, 2.11568, -0.0863295)]
}

[sub_resource type="Animation" id="Animation_nm7x8"]
resource_name = "idle"
length = 2.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponSlot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponSlot/MeshInstance3D2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0.054401, 2.00346, 1.01321), Vector3(0.054401, 1.86724, 1.01321)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WeaponSlot/MeshInstance3D2:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(4.44949e-09, 0.375246, 0.125664), Vector3(-0.0575104, 0.371019, 0.272349)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m3b5o"]
_data = {
"RESET": SubResource("Animation_f54b2"),
"attack": SubResource("Animation_4qic3"),
"idle": SubResource("Animation_nm7x8")
}

[node name="Character" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_fg43h")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.69, 1.51, 0)
mesh = SubResource("CapsuleMesh_ort0e")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.68976, 1.50956, 0)
shape = SubResource("ConvexPolygonShape3D_2ofe8")

[node name="Neck" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="Neck"]
transform = Transform3D(0.999816, -0.0191974, 0, 0.0129449, 0.674178, 0.738455, -0.0141765, -0.738319, 0.674302, 1.55547, 3.29541, 1.3146)
fov = 110.0

[node name="WeaponSlot" type="Node3D" parent="."]

[node name="MeshInstance3D2" type="MeshInstance3D" parent="WeaponSlot"]
transform = Transform3D(0.17599, -0.122912, 0.307667, 0.0238955, 1.04571, -3.73522e-09, -0.0693244, 0.0484164, 0.781059, 0.054401, 2.00346, 1.01321)
mesh = ExtResource("3_k6uxm")
skeleton = NodePath("../..")

[node name="hitbox" type="Area3D" parent="WeaponSlot/MeshInstance3D2"]
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="WeaponSlot/MeshInstance3D2/hitbox"]
transform = Transform3D(1, -4.47035e-08, -1.19209e-07, -3.72529e-09, 1, -2.6077e-08, -7.45058e-09, 3.72529e-08, 1, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_s2kt1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_m3b5o")
}
playback_default_blend_time = 0.1

[node name="HPBar" type="TextureProgressBar" parent="."]
offset_left = 30.0
offset_top = 34.0
offset_right = 563.0
offset_bottom = 74.0
value = 100.0
nine_patch_stretch = true
texture_under = ExtResource("3_vmonl")
texture_progress = ExtResource("3_vmonl")
tint_under = Color(0.233158, 0.243276, 0.247592, 1)
tint_progress = Color(0.858824, 0, 0, 1)

[connection signal="hit" from="." to="." method="_on_hit"]
[connection signal="body_entered" from="WeaponSlot/MeshInstance3D2/hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
